@@ -124,6 +124,15 @@ after installing.
   </li>
   <li>
     <p><strong>Supercopier application causes WinMerge to hang.</strong></p>
+    <p><a href="http://supercopier.sfxteam.org/modules/mydownloads/">Supercopier</a>
+    application causes WinMerge to not exit properly and leaves WinMerge process
+    hang. See the bug reports:
+    <ul>
+      <li><a href="http://winmerge.org/bug/1976241">#1976241</a> the winmerge.exe
+        process doesn't stop itself</li>
+      <li><a href="http://winmerge.org/bug/1602313">#1602313</a> WinMerge stays
+        in tasklist after closing</li>
+    </ul></p>
     <p><i>Workaround</i>: Disable the Supercopier when using WinMerge.</p>
   </li>
   <li>
